Python_Translator/common/src/parser.output
Nonterminals useless in grammar

   function_declaration
   initializer_list
   type_specifier_node
   struct_or_union_specifier
   struct_or_union
   struct_declaration_list
   struct_declaration
   struct_declarator_list
   struct_declarator
   enum_specifier
   enumerator_list
   enumerator
   labeled_statement


Terminals unused in grammar

   STRUCT
   UNION
   ENUM
   CASE
   DEFAULT


Rules useless in grammar

  187 function_declaration: declaration_specifiers declarator parameter_list ';'

  188 initializer_list: initializer
  189                 | initializer_list ',' initializer

  190 type_specifier_node: struct_or_union_specifier
  191                    | enum_specifier

  192 struct_or_union_specifier: struct_or_union C_IDENTIFIER '{' struct_declaration_list '}'
  193                          | struct_or_union '{' struct_declaration_list '}'
  194                          | struct_or_union C_IDENTIFIER

  195 struct_or_union: STRUCT
  196                | UNION

  197 struct_declaration_list: struct_declaration
  198                        | struct_declaration_list struct_declaration

  199 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  200 struct_declarator_list: struct_declarator
  201                       | struct_declarator_list ',' struct_declarator

  202 struct_declarator: declarator
  203                  | ':' constant_expression
  204                  | declarator ':' constant_expression

  205 enum_specifier: ENUM '{' enumerator_list '}'
  206               | ENUM C_IDENTIFIER '{' enumerator_list '}'

  207 enumerator_list: enumerator
  208                | enumerator_list ',' enumerator

  209 enumerator: C_IDENTIFIER
  210           | C_IDENTIFIER '=' constant_expression

  211 labeled_statement: C_IDENTIFIER ':' statement
  212                  | CASE constant_expression ':' statement
  213                  | DEFAULT ':' statement


Rules useless in parser due to conflicts

   95 argument_expression_list: assignment_expression

  114 type_qualifier: CONST
  115               | VOLATILE


State 15 conflicts: 24 reduce/reduce
State 16 conflicts: 24 reduce/reduce
State 95 conflicts: 6 reduce/reduce
State 108 conflicts: 1 shift/reduce, 2 reduce/reduce
State 230 conflicts: 2 reduce/reduce
State 284 conflicts: 1 shift/reduce
State 291 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declaration_specifiers declarator parameter_list compound_statement
    6                    | declaration_specifiers declarator compound_statement
    7                    | declarator parameter_list compound_statement
    8                    | declarator compound_statement

    9 declaration: declaration_specifiers ';'
   10            | declaration_specifiers init_declarator_list ';'
   11            | init_declarator_list ';'

   12 declaration_specifiers: storage_class_specifier
   13                       | storage_class_specifier declaration_specifiers
   14                       | type_specifier
   15                       | type_specifier declaration_specifiers
   16                       | type_qualifier
   17                       | type_qualifier declaration_specifiers

   18 init_declarator_list: init_declarator
   19                     | init_declarator_list ',' init_declarator

   20 init_declarator: declarator
   21                | declarator '=' initializer

   22 initializer: assignment_expression

   23 storage_class_specifier: TYPEDEF
   24                        | EXTERN
   25                        | STATIC
   26                        | AUTO
   27                        | REGISTER

   28 type_specifier: VOID
   29               | CHAR
   30               | SHORT
   31               | INT
   32               | LONG
   33               | FLOAT
   34               | DOUBLE
   35               | SIGNED
   36               | UNSIGNED

   37 type_qualifier: CONST
   38               | VOLATILE

   39 specifier_qualifier_list: type_specifier specifier_qualifier_list
   40                         | type_specifier
   41                         | type_qualifier specifier_qualifier_list
   42                         | type_qualifier

   43 constant_expression: conditional_expression

   44 conditional_expression: logical_or_expression
   45                       | logical_or_expression '?' expression ':' conditional_expression

   46 expression: assignment_expression
   47           | expression ',' assignment_expression

   48 unary_expression: postfix_expression
   49                 | INC_OP unary_expression
   50                 | DEC_OP unary_expression
   51                 | unary_operator cast_expression
   52                 | SIZEOF unary_expression
   53                 | SIZEOF '(' type_name ')'

   54 unary_operator: '&'
   55               | '*'
   56               | '+'
   57               | '-'
   58               | '~'
   59               | '!'

   60 cast_expression: unary_expression
   61                | '(' type_name ')' cast_expression

   62 assignment_operator: '='
   63                    | RIGHT_ASSIGN
   64                    | LEFT_ASSIGN
   65                    | ADD_ASSIGN
   66                    | SUB_ASSIGN
   67                    | MUL_ASSIGN
   68                    | DIV_ASSIGN
   69                    | MOD_ASSIGN
   70                    | AND_ASSIGN
   71                    | XOR_ASSIGN
   72                    | OR_ASSIGN

   73 inclusive_or_expression: exclusive_or_expression
   74                        | inclusive_or_expression '|' exclusive_or_expression

   75 logical_or_expression: logical_and_expression
   76                      | logical_or_expression OR_OP logical_and_expression

   77 logical_and_expression: inclusive_or_expression
   78                       | logical_and_expression AND_OP inclusive_or_expression

   79 type_name: specifier_qualifier_list
   80          | specifier_qualifier_list abstract_declarator

   81 postfix_expression: primary_expression
   82                   | postfix_expression '[' expression ']'
   83                   | postfix_expression '(' ')'
   84                   | postfix_expression '(' argument_expression_list ')'
   85                   | postfix_expression '(' expression ')'
   86                   | postfix_expression '.' C_IDENTIFIER
   87                   | postfix_expression PTR_OP C_IDENTIFIER
   88                   | postfix_expression INC_OP
   89                   | postfix_expression DEC_OP

   90 primary_expression: C_IDENTIFIER
   91                   | INT_CONSTANT
   92                   | FLOAT_CONST
   93                   | CHAR_CONST
   94                   | '(' expression ')'

   95 argument_expression_list: assignment_expression
   96                         | argument_expression_list ',' assignment_expression

   97 assignment_expression: conditional_expression
   98                      | unary_expression assignment_operator assignment_expression

   99 declarator: pointer direct_declarator
  100           | direct_declarator

  101 direct_declarator: C_IDENTIFIER
  102                  | '(' declarator ')'
  103                  | direct_declarator '[' constant_expression ']'
  104                  | direct_declarator '[' ']'
  105                  | direct_declarator '(' parameter_list ')'
  106                  | direct_declarator '(' identifier_list ')'
  107                  | direct_declarator '(' ')'

  108 pointer: '*'
  109        | '*' type_qualifier_list
  110        | '*' pointer
  111        | '*' type_qualifier_list pointer

  112 type_qualifier_list: type_qualifier
  113                    | type_qualifier_list type_qualifier

  114 type_qualifier: CONST
  115               | VOLATILE

  116 parameter_type_list: parameter_list
  117                    | parameter_list ',' ELLIPSIS

  118 parameter_list: parameter_declaration
  119               | parameter_list ',' parameter_declaration

  120 parameter_declaration: declaration_specifiers declarator
  121                      | declaration_specifiers abstract_declarator
  122                      | declaration_specifiers

  123 abstract_declarator: pointer
  124                    | direct_abstract_declarator
  125                    | pointer direct_abstract_declarator

  126 direct_abstract_declarator: '(' abstract_declarator ')'
  127                           | '[' ']'
  128                           | '[' constant_expression ']'
  129                           | direct_abstract_declarator '[' ']'
  130                           | direct_abstract_declarator '[' constant_expression ']'
  131                           | '(' ')'
  132                           | '(' parameter_type_list ')'
  133                           | direct_abstract_declarator '(' ')'
  134                           | direct_abstract_declarator '(' parameter_type_list ')'

  135 identifier_list: C_IDENTIFIER
  136                | identifier_list ',' C_IDENTIFIER

  137 statement: compound_statement
  138          | expression_statement
  139          | selection_statement
  140          | iteration_statement
  141          | jump_statement

  142 compound_statement: '{' '}'
  143                   | '{' statement_list '}'
  144                   | '{' declaration_list '}'
  145                   | '{' declaration_list statement_list '}'

  146 declaration_list: declaration
  147                 | declaration_list declaration

  148 statement_list: statement
  149               | statement_list statement

  150 expression_statement: ';'
  151                     | expression ';'

  152 selection_statement: IF '(' expression ')' statement
  153                    | IF '(' expression ')' statement ELSE statement
  154                    | SWITCH '(' expression ')' statement

  155 iteration_statement: WHILE '(' expression ')' statement
  156                    | DO statement WHILE '(' expression ')' ';'
  157                    | FOR '(' expression_statement expression_statement ')' statement
  158                    | FOR '(' expression_statement expression_statement expression ')' statement

  159 jump_statement: GOTO C_IDENTIFIER ';'
  160               | CONTINUE ';'
  161               | BREAK ';'
  162               | RETURN ';'
  163               | RETURN '(' expression ')' ';'
  164               | RETURN expression ';'

  165 multiplicative_expression: unary_expression
  166                          | multiplicative_expression '*' unary_expression
  167                          | multiplicative_expression '/' unary_expression
  168                          | multiplicative_expression '%' unary_expression

  169 additive_expression: multiplicative_expression
  170                    | additive_expression '+' multiplicative_expression
  171                    | additive_expression '-' multiplicative_expression

  172 shift_expression: additive_expression
  173                 | shift_expression LEFT_OP additive_expression
  174                 | shift_expression RIGHT_OP additive_expression

  175 relational_expression: shift_expression
  176                      | relational_expression '<' shift_expression
  177                      | relational_expression '>' shift_expression
  178                      | relational_expression LE_OP shift_expression
  179                      | relational_expression GE_OP shift_expression

  180 equality_expression: relational_expression
  181                    | equality_expression EQ_OP relational_expression
  182                    | equality_expression NE_OP relational_expression

  183 and_expression: equality_expression
  184               | and_expression '&' equality_expression

  185 exclusive_or_expression: and_expression
  186                        | exclusive_or_expression '^' and_expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 59
'%' (37) 168
'&' (38) 54 184
'(' (40) 53 61 83 84 85 94 102 105 106 107 126 131 132 133 134 152
    153 154 155 156 157 158 163
')' (41) 53 61 83 84 85 94 102 105 106 107 126 131 132 133 134 152
    153 154 155 156 157 158 163
'*' (42) 55 108 109 110 111 166
'+' (43) 56 170
',' (44) 19 47 96 117 119 136
'-' (45) 57 171
'.' (46) 86
'/' (47) 167
':' (58) 45
';' (59) 9 10 11 150 151 156 159 160 161 162 163 164
'<' (60) 176
'=' (61) 21 62
'>' (62) 177
'?' (63) 45
'[' (91) 82 103 104 127 128 129 130
']' (93) 82 103 104 127 128 129 130
'^' (94) 186
'{' (123) 142 143 144 145
'|' (124) 74
'}' (125) 142 143 144 145
'~' (126) 58
error (256)
C_IDENTIFIER (258) 86 87 90 101 135 136 159
INT_CONSTANT (259) 91
FLOAT_CONST (260) 92
CHAR_CONST (261) 93
SIZEOF (262) 52 53
PTR_OP (263) 87
INC_OP (264) 49 88
DEC_OP (265) 50 89
LEFT_OP (266) 173
RIGHT_OP (267) 174
LE_OP (268) 178
GE_OP (269) 179
EQ_OP (270) 181
NE_OP (271) 182
AND_OP (272) 78
OR_OP (273) 76
MUL_ASSIGN (274) 67
DIV_ASSIGN (275) 68
MOD_ASSIGN (276) 69
ADD_ASSIGN (277) 65
SUB_ASSIGN (278) 66
LEFT_ASSIGN (279) 64
RIGHT_ASSIGN (280) 63
AND_ASSIGN (281) 70
XOR_ASSIGN (282) 71
OR_ASSIGN (283) 72
TYPEDEF (284) 23
EXTERN (285) 24
STATIC (286) 25
AUTO (287) 26
REGISTER (288) 27
CHAR (289) 29
SHORT (290) 30
INT (291) 31
LONG (292) 32
SIGNED (293) 35
UNSIGNED (294) 36
FLOAT (295) 33
DOUBLE (296) 34
CONST (297) 37 114
VOLATILE (298) 38 115
VOID (299) 28
STRUCT (300)
UNION (301)
ENUM (302)
ELLIPSIS (303) 117
CASE (304)
DEFAULT (305)
IF (306) 152 153
ELSE (307) 153
SWITCH (308) 154
WHILE (309) 155 156
DO (310) 156
FOR (311) 157 158
GOTO (312) 159
CONTINUE (313) 160
BREAK (314) 161
RETURN (315) 162 163 164


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
translation_unit (86)
    on left: 1 2, on right: 0 2
external_declaration (87)
    on left: 3 4, on right: 1 2
function_definition (88)
    on left: 5 6 7 8, on right: 3
declaration (89)
    on left: 9 10 11, on right: 4 146 147
declaration_specifiers (90)
    on left: 12 13 14 15 16 17, on right: 5 6 9 10 13 15 17 120 121
    122
init_declarator_list (91)
    on left: 18 19, on right: 10 11 19
init_declarator (92)
    on left: 20 21, on right: 18 19
initializer (93)
    on left: 22, on right: 21
storage_class_specifier (94)
    on left: 23 24 25 26 27, on right: 12 13
type_specifier (95)
    on left: 28 29 30 31 32 33 34 35 36, on right: 14 15 39 40
type_qualifier (96)
    on left: 37 38 114 115, on right: 16 17 41 42 112 113
specifier_qualifier_list (97)
    on left: 39 40 41 42, on right: 39 41 79 80
constant_expression (98)
    on left: 43, on right: 103 128 130
conditional_expression (99)
    on left: 44 45, on right: 43 45 97
expression (100)
    on left: 46 47, on right: 45 47 82 85 94 151 152 153 154 155 156
    158 163 164
unary_expression (101)
    on left: 48 49 50 51 52 53, on right: 49 50 52 60 98 165 166 167
    168
unary_operator (102)
    on left: 54 55 56 57 58 59, on right: 51
cast_expression (103)
    on left: 60 61, on right: 51 61
assignment_operator (104)
    on left: 62 63 64 65 66 67 68 69 70 71 72, on right: 98
inclusive_or_expression (105)
    on left: 73 74, on right: 74 77 78
logical_or_expression (106)
    on left: 75 76, on right: 44 45 76
logical_and_expression (107)
    on left: 77 78, on right: 75 76 78
type_name (108)
    on left: 79 80, on right: 53 61
postfix_expression (109)
    on left: 81 82 83 84 85 86 87 88 89, on right: 48 82 83 84 85 86
    87 88 89
primary_expression (110)
    on left: 90 91 92 93 94, on right: 81
argument_expression_list (111)
    on left: 95 96, on right: 84 96
assignment_expression (112)
    on left: 97 98, on right: 22 46 47 95 96 98
declarator (113)
    on left: 99 100, on right: 5 6 7 8 20 21 102 120
direct_declarator (114)
    on left: 101 102 103 104 105 106 107, on right: 99 100 103 104
    105 106 107
pointer (115)
    on left: 108 109 110 111, on right: 99 110 111 123 125
type_qualifier_list (116)
    on left: 112 113, on right: 109 111 113
parameter_type_list (117)
    on left: 116 117, on right: 132 134
parameter_list (118)
    on left: 118 119, on right: 5 7 105 116 117 119
parameter_declaration (119)
    on left: 120 121 122, on right: 118 119
abstract_declarator (120)
    on left: 123 124 125, on right: 80 121 126
direct_abstract_declarator (121)
    on left: 126 127 128 129 130 131 132 133 134, on right: 124 125
    129 130 133 134
identifier_list (122)
    on left: 135 136, on right: 106 136
statement (123)
    on left: 137 138 139 140 141, on right: 148 149 152 153 154 155
    156 157 158
compound_statement (124)
    on left: 142 143 144 145, on right: 5 6 7 8 137
declaration_list (125)
    on left: 146 147, on right: 144 145 147
statement_list (126)
    on left: 148 149, on right: 143 145 149
expression_statement (127)
    on left: 150 151, on right: 138 157 158
selection_statement (128)
    on left: 152 153 154, on right: 139
iteration_statement (129)
    on left: 155 156 157 158, on right: 140
jump_statement (130)
    on left: 159 160 161 162 163 164, on right: 141
multiplicative_expression (131)
    on left: 165 166 167 168, on right: 166 167 168 169 170 171
additive_expression (132)
    on left: 169 170 171, on right: 170 171 172 173 174
shift_expression (133)
    on left: 172 173 174, on right: 173 174 175 176 177 178 179
relational_expression (134)
    on left: 175 176 177 178 179, on right: 176 177 178 179 180 181
    182
equality_expression (135)
    on left: 180 181 182, on right: 181 182 183 184
and_expression (136)
    on left: 183 184, on right: 184 185 186
exclusive_or_expression (137)
    on left: 185 186, on right: 73 74 186


State 0

    0 $accept: . translation_unit $end

    C_IDENTIFIER  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    CHAR          shift, and go to state 7
    SHORT         shift, and go to state 8
    INT           shift, and go to state 9
    LONG          shift, and go to state 10
    SIGNED        shift, and go to state 11
    UNSIGNED      shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    CONST         shift, and go to state 15
    VOLATILE      shift, and go to state 16
    VOID          shift, and go to state 17
    '('           shift, and go to state 18
    '*'           shift, and go to state 19

    translation_unit         go to state 20
    external_declaration     go to state 21
    function_definition      go to state 22
    declaration              go to state 23
    declaration_specifiers   go to state 24
    init_declarator_list     go to state 25
    init_declarator          go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    type_qualifier           go to state 29
    declarator               go to state 30
    direct_declarator        go to state 31
    pointer                  go to state 32


State 1

  101 direct_declarator: C_IDENTIFIER .

    $default  reduce using rule 101 (direct_declarator)


State 2

   23 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 23 (storage_class_specifier)


State 3

   24 storage_class_specifier: EXTERN .

    $default  reduce using rule 24 (storage_class_specifier)


State 4

   25 storage_class_specifier: STATIC .

    $default  reduce using rule 25 (storage_class_specifier)


State 5

   26 storage_class_specifier: AUTO .

    $default  reduce using rule 26 (storage_class_specifier)


State 6

   27 storage_class_specifier: REGISTER .

    $default  reduce using rule 27 (storage_class_specifier)


State 7

   29 type_specifier: CHAR .

    $default  reduce using rule 29 (type_specifier)


State 8

   30 type_specifier: SHORT .

    $default  reduce using rule 30 (type_specifier)


State 9

   31 type_specifier: INT .

    $default  reduce using rule 31 (type_specifier)


State 10

   32 type_specifier: LONG .

    $default  reduce using rule 32 (type_specifier)


State 11

   35 type_specifier: SIGNED .

    $default  reduce using rule 35 (type_specifier)


State 12

   36 type_specifier: UNSIGNED .

    $default  reduce using rule 36 (type_specifier)


State 13

   33 type_specifier: FLOAT .

    $default  reduce using rule 33 (type_specifier)


State 14

   34 type_specifier: DOUBLE .

    $default  reduce using rule 34 (type_specifier)


State 15

   37 type_qualifier: CONST .
  114               | CONST .

    C_IDENTIFIER  reduce using rule 37 (type_qualifier)
    C_IDENTIFIER  [reduce using rule 114 (type_qualifier)]
    TYPEDEF       reduce using rule 37 (type_qualifier)
    TYPEDEF       [reduce using rule 114 (type_qualifier)]
    EXTERN        reduce using rule 37 (type_qualifier)
    EXTERN        [reduce using rule 114 (type_qualifier)]
    STATIC        reduce using rule 37 (type_qualifier)
    STATIC        [reduce using rule 114 (type_qualifier)]
    AUTO          reduce using rule 37 (type_qualifier)
    AUTO          [reduce using rule 114 (type_qualifier)]
    REGISTER      reduce using rule 37 (type_qualifier)
    REGISTER      [reduce using rule 114 (type_qualifier)]
    CHAR          reduce using rule 37 (type_qualifier)
    CHAR          [reduce using rule 114 (type_qualifier)]
    SHORT         reduce using rule 37 (type_qualifier)
    SHORT         [reduce using rule 114 (type_qualifier)]
    INT           reduce using rule 37 (type_qualifier)
    INT           [reduce using rule 114 (type_qualifier)]
    LONG          reduce using rule 37 (type_qualifier)
    LONG          [reduce using rule 114 (type_qualifier)]
    SIGNED        reduce using rule 37 (type_qualifier)
    SIGNED        [reduce using rule 114 (type_qualifier)]
    UNSIGNED      reduce using rule 37 (type_qualifier)
    UNSIGNED      [reduce using rule 114 (type_qualifier)]
    FLOAT         reduce using rule 37 (type_qualifier)
    FLOAT         [reduce using rule 114 (type_qualifier)]
    DOUBLE        reduce using rule 37 (type_qualifier)
    DOUBLE        [reduce using rule 114 (type_qualifier)]
    CONST         reduce using rule 37 (type_qualifier)
    CONST         [reduce using rule 114 (type_qualifier)]
    VOLATILE      reduce using rule 37 (type_qualifier)
    VOLATILE      [reduce using rule 114 (type_qualifier)]
    VOID          reduce using rule 37 (type_qualifier)
    VOID          [reduce using rule 114 (type_qualifier)]
    ';'           reduce using rule 37 (type_qualifier)
    ';'           [reduce using rule 114 (type_qualifier)]
    ','           reduce using rule 37 (type_qualifier)
    ','           [reduce using rule 114 (type_qualifier)]
    '{'           reduce using rule 37 (type_qualifier)
    '{'           [reduce using rule 114 (type_qualifier)]
    '('           reduce using rule 37 (type_qualifier)
    '('           [reduce using rule 114 (type_qualifier)]
    ')'           reduce using rule 37 (type_qualifier)
    ')'           [reduce using rule 114 (type_qualifier)]
    '*'           reduce using rule 37 (type_qualifier)
    '*'           [reduce using rule 114 (type_qualifier)]
    '['           reduce using rule 37 (type_qualifier)
    '['           [reduce using rule 114 (type_qualifier)]
    $default      reduce using rule 37 (type_qualifier)


State 16

   38 type_qualifier: VOLATILE .
  115               | VOLATILE .

    C_IDENTIFIER  reduce using rule 38 (type_qualifier)
    C_IDENTIFIER  [reduce using rule 115 (type_qualifier)]
    TYPEDEF       reduce using rule 38 (type_qualifier)
    TYPEDEF       [reduce using rule 115 (type_qualifier)]
    EXTERN        reduce using rule 38 (type_qualifier)
    EXTERN        [reduce using rule 115 (type_qualifier)]
    STATIC        reduce using rule 38 (type_qualifier)
    STATIC        [reduce using rule 115 (type_qualifier)]
    AUTO          reduce using rule 38 (type_qualifier)
    AUTO          [reduce using rule 115 (type_qualifier)]
    REGISTER      reduce using rule 38 (type_qualifier)
    REGISTER      [reduce using rule 115 (type_qualifier)]
    CHAR          reduce using rule 38 (type_qualifier)
    CHAR          [reduce using rule 115 (type_qualifier)]
    SHORT         reduce using rule 38 (type_qualifier)
    SHORT         [reduce using rule 115 (type_qualifier)]
    INT           reduce using rule 38 (type_qualifier)
    INT           [reduce using rule 115 (type_qualifier)]
    LONG          reduce using rule 38 (type_qualifier)
    LONG          [reduce using rule 115 (type_qualifier)]
    SIGNED        reduce using rule 38 (type_qualifier)
    SIGNED        [reduce using rule 115 (type_qualifier)]
    UNSIGNED      reduce using rule 38 (type_qualifier)
    UNSIGNED      [reduce using rule 115 (type_qualifier)]
    FLOAT         reduce using rule 38 (type_qualifier)
    FLOAT         [reduce using rule 115 (type_qualifier)]
    DOUBLE        reduce using rule 38 (type_qualifier)
    DOUBLE        [reduce using rule 115 (type_qualifier)]
    CONST         reduce using rule 38 (type_qualifier)
    CONST         [reduce using rule 115 (type_qualifier)]
    VOLATILE      reduce using rule 38 (type_qualifier)
    VOLATILE      [reduce using rule 115 (type_qualifier)]
    VOID          reduce using rule 38 (type_qualifier)
    VOID          [reduce using rule 115 (type_qualifier)]
    ';'           reduce using rule 38 (type_qualifier)
    ';'           [reduce using rule 115 (type_qualifier)]
    ','           reduce using rule 38 (type_qualifier)
    ','           [reduce using rule 115 (type_qualifier)]
    '{'           reduce using rule 38 (type_qualifier)
    '{'           [reduce using rule 115 (type_qualifier)]
    '('           reduce using rule 38 (type_qualifier)
    '('           [reduce using rule 115 (type_qualifier)]
    ')'           reduce using rule 38 (type_qualifier)
    ')'           [reduce using rule 115 (type_qualifier)]
    '*'           reduce using rule 38 (type_qualifier)
    '*'           [reduce using rule 115 (type_qualifier)]
    '['           reduce using rule 38 (type_qualifier)
    '['           [reduce using rule 115 (type_qualifier)]
    $default      reduce using rule 38 (type_qualifier)


State 17

   28 type_specifier: VOID .

    $default  reduce using rule 28 (type_specifier)


State 18

  102 direct_declarator: '(' . declarator ')'

    C_IDENTIFIER  shift, and go to state 1
    '('           shift, and go to state 18
    '*'           shift, and go to state 19

    declarator         go to state 33
    direct_declarator  go to state 31
    pointer            go to state 32


State 19

  108 pointer: '*' .
  109        | '*' . type_qualifier_list
  110        | '*' . pointer
  111        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    '*'       shift, and go to state 19

    $default  reduce using rule 108 (pointer)

    type_qualifier       go to state 34
    pointer              go to state 35
    type_qualifier_list  go to state 36


State 20

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end          shift, and go to state 37
    C_IDENTIFIER  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    CHAR          shift, and go to state 7
    SHORT         shift, and go to state 8
    INT           shift, and go to state 9
    LONG          shift, and go to state 10
    SIGNED        shift, and go to state 11
    UNSIGNED      shift, and go to state 12
    FLOAT         shift, and go to state 13
    DOUBLE        shift, and go to state 14
    CONST         shift, and go to state 15
    VOLATILE      shift, and go to state 16
    VOID          shift, and go to state 17
    '('           shift, and go to state 18
    '*'           shift, and go to state 19

    external_declaration     go to state 38
    function_definition      go to state 22
    declaration              go to state 23
    declaration_specifiers   go to state 24
    init_declarator_list     go to state 25
    init_declarator          go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    type_qualifier           go to state 29
    declarator               go to state 30
    direct_declarator        go to state 31
    pointer                  go to state 32


State 21

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 22

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


State 23

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


State 24

    5 function_definition: declaration_specifiers . declarator parameter_list compound_statement
    6                    | declaration_specifiers . declarator compound_statement
    9 declaration: declaration_specifiers . ';'
   10            | declaration_specifiers . init_declarator_list ';'

    C_IDENTIFIER  shift, and go to state 1
    ';'           shift, and go to state 39
    '('           shift, and go to state 18
    '*'           shift, and go to state 19

    init_declarator_list  go to state 40
    init_declarator       go to state 26
    declarator            go to state 41
    direct_declarator     go to state 31
    pointer               go to state 32


State 25

   11 declaration: init_declarator_list . ';'
   19 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 42
    ','  shift, and go to state 43


State 26

   18 init_declarator_list: init_declarator .

    $default  reduce using rule 18 (init_declarator_list)


State 27

   12 declaration_specifiers: storage_class_specifier .
   13                       | storage_class_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17

    $default  reduce using rule 12 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    type_qualifier           go to state 29


State 28

   14 declaration_specifiers: type_specifier .
   15                       | type_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17

    $default  reduce using rule 14 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    type_qualifier           go to state 29


State 29

   16 declaration_specifiers: type_qualifier .
   17                       | type_qualifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17

    $default  reduce using rule 16 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    type_qualifier           go to state 29


State 30

    7 function_definition: declarator . parameter_list compound_statement
    8                    | declarator . compound_statement
   20 init_declarator: declarator .
   21                | declarator . '=' initializer

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    STATIC    shift, and go to state 4
    AUTO      shift, and go to state 5
    REGISTER  shift, and go to state 6
    CHAR      shift, and go to state 7
    SHORT     shift, and go to state 8
    INT       shift, and go to state 9
    LONG      shift, and go to state 10
    SIGNED    shift, and go to state 11
    UNSIGNED  shift, and go to state 12
    FLOAT     shift, and go to state 13
    DOUBLE    shift, and go to state 14
    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    VOID      shift, and go to state 17
    '='       shift, and go to state 47
    '{'       shift, and go to state 48

    $default  reduce using rule 20 (init_declarator)

    declaration_specifiers   go to state 49
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    type_qualifier           go to state 29
    parameter_list           go to state 50
    parameter_declaration    go to state 51
    compound_statement       go to state 52


State 31

  100 declarator: direct_declarator .
  103 direct_declarator: direct_declarator . '[' constant_expression ']'
  104                  | direct_declarator . '[' ']'
  105                  | direct_declarator . '(' parameter_list ')'
  106                  | direct_declarator . '(' identifier_list ')'
  107                  | direct_declarator . '(' ')'

    '('  shift, and go to state 53
    '['  shift, and go to state 54

    $default  reduce using rule 100 (declarator)


State 32

   99 declarator: pointer . direct_declarator

    C_IDENTIFIER  shift, and go to state 1
    '('           shift, and go to state 18

    direct_declarator  go to state 55


State 33

  102 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 56


State 34

  112 type_qualifier_list: type_qualifier .

    $default  reduce using rule 112 (type_qualifier_list)


State 35

  110 pointer: '*' pointer .

    $default  reduce using rule 110 (pointer)


State 36

  109 pointer: '*' type_qualifier_list .
  111        | '*' type_qualifier_list . pointer
  113 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 15
    VOLATILE  shift, and go to state 16
    '*'       shift, and go to state 19

    $default  reduce using rule 109 (pointer)

    type_qualifier  go to state 57
    pointer         go to state 58


State 37

    0 $accept: translation_unit $end .

    $default  accept


State 38

    2 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 39

    9 declaration: declaration_specifiers ';' .

    $default  reduce using rule 9 (declaration)


State 40

   10 declaration: declaration_specifiers init_declarator_list . ';'
   19 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 59
    ','  shift, and go to state 43


State 41

    5 function_definition: declaration_specifiers declarator . parameter_list compound_statement
    6                    | declaration_specifiers declarator . compound_statement
   20 init_declarator: declarator .
   21                | declarator . '=' initializer
